# LSIOCatalog

./: .gitignore  LICENSE  README.md  apps.yml  catalog.yml  provenance.json  pyproject.toml  rejected.json
.github/workflows/: generate.yml
beets/: service.yml
budge/: service.yml
calibre-web/: service.yml
catalog/: provenance.json  rejected.json
catalog/adguardhome-sync/: service.yml
catalog/airsonic-advanced/: service.yml
catalog/altus/: service.yml
catalog/apprise-api/: service.yml
catalog/ardour/: service.yml
catalog/audacity/: service.yml
catalog/azahar/: service.yml
catalog/babybuddy/: service.yml
catalog/bambustudio/: service.yml
catalog/bazarr/: service.yml
catalog/bitcoin-knots/: service.yml
catalog/blade-of-agony/: service.yml
catalog/blender/: service.yml
catalog/boinc/: service.yml
catalog/bookstack/: service.yml
catalog/brave/: service.yml
catalog/calligra/: service.yml
catalog/changedetection.io/: service.yml
chrome/: service.yml
code-server/: service.yml
cops/: service.yml
davos/: service.yml
filezilla/: service.yml
freshrss/: service.yml
habridge/: service.yml
handbrake/: service.yml
inkscape/: service.yml
kali-linux/: service.yml
kavita/: service.yml
kicad/: service.yml
krita/: service.yml
lazylibrarian/: service.yml
lidarr/: service.yml
limnoria/: service.yml
mariadb/: service.yml
mediaelch/: service.yml
modrinth/: service.yml
msedge/: service.yml
nextcloud/: service.yml
ombi/: service.yml
opera/: service.yml
pairdrop/: service.yml
phpmyadmin/: service.yml
pidgin/: service.yml
ppsspp/: service.yml
prowlarr/: service.yml
pycharm/: service.yml
qbittorrent/: service.yml
raneto/: service.yml
rawtherapee/: service.yml
resilio-sync/: service.yml
sickgear/: service.yml
sonarr/: service.yml
syncthing/: service.yml
tests/: conftest.py  test_convert.py  test_generate.py  test_reject.py  test_validate.py
thunderbird/: service.yml
transmission/: service.yml
tvheadend/: service.yml
vivaldi/: service.yml
vscodium-web/: service.yml
webcord/: service.yml
webstation/: service.yml
xemu/: service.yml
znc/: service.yml
(+114 files in other folders)
